--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-qr-popup",
-  "version": "1.0.5",
-  "description": "A React component that shows a QR code popup.",
+  "version": "1.0.6",
+  "description": "A React component that shows a QR code popup on your app.",
   "main": "src/index.js",
   "scripts": {
     "build": "babel src --out-dir dist",
